# SwarmPAL

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: acknowledgements.md  api-fac.rst  api-io.rst  api-secs.rst  api-tfa.rst  api.rst  changelog.md  cli.rst  conf.py  contributing.md  extra-requirements.txt  index.md  index.rst  installation.md  introduction.md  quickstart.md
docs/_templates/sections/: header.html
docs/api/: cli.rst  dsecs.rst  express.rst  fac.rst  io.rst  swarmpal.rst  tfa.rst  utils.rst
docs/guides/: quickstart.ipynb  tutorial.ipynb
docs/guides/dsecs/: intro_dsecs.ipynb
docs/guides/fac/: intro_fac.ipynb
docs/guides/secs/: intro_dsecs.ipynb  intro_secs.ipynb  using_dsecs.ipynb
docs/guides/shared/: data_io.ipynb  paldata.ipynb
docs/guides/tfa/: intro_tfa.ipynb  tfa_AUX_OBS.ipynb  tfa_Cluster.ipynb  tfa_EFIx_TCT.ipynb  tfa_MAGx_HR.ipynb  tfa_MAGx_LR.ipynb  tfa_background.ipynb  using_tfa_1.ipynb
docs/toolboxes/fac/: intro_fac.ipynb  using_fac.ipynb
docs/toolboxes/secs/: using_secs.ipynb
docs/toolboxes/shared/: data_io.ipynb  paldata.ipynb
docs/toolboxes/tfa/: C3_JP_PMP_104449.txt  intro_tfa.ipynb  using_tfa.ipynb  using_tfa_1.ipynb  using_tfa_2.ipynb  using_tfa_3.ipynb  using_tfa_4.ipynb  using_tfa_5.ipynb
docs/toolboxes/tfa/data/: C3_JP_PMP_104449.txt
src/swarmpal/: __init__.py  _api.py  schema.py
src/swarmpal/cli/: __init__.py  commands.py
src/swarmpal/experimental/: __init__.py  _local_magnetic_model.py  _mjd2000.py  _mma_sha_2e.py  dsecs_plotting.py
src/swarmpal/express/: __init__.py  _pre_configured_runs.py
src/swarmpal/io/: __init__.py  _cdf_interface.py  _data_container.py  _datafetchers.py  _paldata.py  datafetchers.py  paldata.py
src/swarmpal/toolboxes/: __init__.py
src/swarmpal/toolboxes/dsecs/: __init__.py  aux_tools.py  dsecs_algorithms.py  plotting.py  processes.py
src/swarmpal/toolboxes/fac/: __init__.py  fac_algorithms.py  fac_processor.py  presets.py  processes.py
src/swarmpal/toolboxes/secs/: __init__.py  analysis.py  aux_tools.py  dsecs_algorithms.py  dsecs_analysis.py  dsecs_processor.py  processes.py  secs_inputs.py  sub_fit_1D_DivFree.py
src/swarmpal/toolboxes/tfa/: __init__.py  plotting.py  processes.py  tfa_processor.py  tfalib.py
src/swarmpal/utils/: __init__.py  configs.py  exceptions.py  queries.py
src/swarmx/: __init__.py  hello.py
src/swarmx/io/: __init__.py  _data_container.py
src/swarmx/toolboxes/fac/: __init__.py  _fac_single_sat.py  fac_algorithms.py
src/swarmx/toolboxes/secs/: __init__.py  analysis.py  aux_tools.py  dsecs_algorithms.py  dsecs_analysis.py  secs_inputs.py  sub_fit_1D_DivFree.py
src/swarmx/toolboxes/tfa/: __init__.py  test_spectral_v2.py  tfa_algorithms.py  tfa_processor.py  tfa_simplified.py  tfalib.py  tfalib_dev.py
src/swarmx/toolboxes/tfa_v2/: tfa_classes.py  tfa_process_example.py  tfalib.py
tests/: test_cli.py  test_data.py  test_fetch_data.py  test_io.py  test_package.py  test_schema.py  test_toolbox_fac.py
tests/dsecs/: test_dsecs_tools.py
tests/fac/: test_fac_tools.py
tests/io/: test_datafetchers.py  test_paldata.py  test_palprocess.py
tests/tfa/: test_tfa_tools.py
tests/toolboxes/secs/: test_secs_inputs.py
