[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"


[project]
name = "swarmpal"
authors = [
    { name = "Ashley Smith", email = "ashley.smith@ed.ac.uk" },
]
maintainers = [
    { name = "Ashley Smith", email = "ashley.smith@ed.ac.uk" },
]
license = { file = "LICENSE" }

description = "Toolbox for ESA's Swarm mission"
readme = "README.md"

requires-python = ">=3.8"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
]

dynamic = ["version"]

dependencies = [
    "hapiclient >= 0.2.3",
    "numpy >= 1.21",
    "matplotlib >= 3.5",
    "scipy >= 1.8",
    "viresclient >= 0.11",
    "xarray >= 0.21",
    "xarray-datatree >= 0.0.11",
]

[project.optional-dependencies]
dsecs = [
    "apexpy>=1.1.0",
    "pyproj>=3",
]
dsecs_cp38_manylinux = [
    "apexpy @ https://github.com/smithara/apexpy/releases/download/v1.1.0-binaries/apexpy-1.1.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
    "pyproj>=3"
]
test = [
    "pytest >=6",
]
dev = [
    "pytest >=6",
    "nox >=2022",
]
docs = [
    "Sphinx==4.5",
    "myst-nb==0.17.1",
    "sphinx-book-theme==0.3.3",
    "sphinx_copybutton==0.5.1",
    "matplotlib==3.6",
    "ipywidgets==8.0",
    "ipython!=8.7.0",
]


[project.urls]
homepage = "https://github.com/Swarm-DISC/SwarmPAL"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    # Temporary measures which should be fixed
    "ignore:unclosed <ssl.SSLSocket:ResourceWarning",
    # Ignore warnings raised by apexpy (temporarily?)
    "ignore::RuntimeWarning",
    "ignore::UserWarning",
]
testpaths = [
    "tests",
]
markers = [
    "remote",
    "dsecs",
]


[tool.pycln]
all = true


[tool.mypy]
files = "src"
python_version = "3.8"
warn_unused_configs = true
ignore_missing_imports = true

check_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_return_any = true
# no_implicit_reexport = true
# strict_equality = true

[tool.isort]
profile = "black"
